test/variables/vass/ref-to-const-domain.bad
ref-to-const-domain.chpl:5: internal error: FUN4924 chpl Version mmmm
